--- a/elements.html
+++ b/elements.html
@@ -221,7 +221,7 @@
 									<hr />
 
 
-									<h2>Quick Links</h2>
+									<!-- <h2>Quick Links</h2>
 									<ul class="actions">
 										<li><a href="index.html" class="button primary">View Projects</a></li>
 										<li><a href="https://github.com/desmond-lartey" class="button">About Me</a></li>
@@ -235,18 +235,18 @@
 										<li><a href="https://github.com/desmond-lartey" class="button fit">GitHub</a></li>
 									</ul>
 									
-									<h2>Contact Me</h2>
+									<h2>Contact Me</h2> -->
 
-									<form method="post" action="https://formspree.io/f/meqyevqq">
+									<!-- <form method="post" action="https://formspree.io/f/meqyevqq">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall">
 												<input type="text" name="name" id="name" placeholder="Your Name" required />
 											</div>
 											<div class="col-6 col-12-xsmall">
 												<input type="email" name="_replyto" id="email" placeholder="Your Email" required />
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-12">
+											<!-- <div class="col-12">
 												<select name="inquiry-type" id="inquiry-type">
 													<option value="">- Inquiry Type -</option>
 													<option value="Project Inquiry">Project Inquiry</option>
@@ -254,23 +254,23 @@
 													<option value="General Question">General Question</option>
 													<option value="Other">Other</option>
 												</select>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-12">
+											<!-- <div class="col-12">
 												<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-12">
+											<!-- <div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" value="Send Message" class="primary" /></li>
 													<li><input type="reset" value="Reset" /></li>
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 									
 											<!-- Break -->
-											<div class="col-4 col-12-small">
+											<!-- <div class="col-4 col-12-small">
 												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 												<label for="demo-priority-low">Low</label>
 											</div>
@@ -281,22 +281,22 @@
 											<div class="col-4 col-12-small">
 												<input type="radio" id="demo-priority-high" name="demo-priority">
 												<label for="demo-priority-high">High</label>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-6 col-12-small">
+											<!-- <div class="col-6 col-12-small">
 												<input type="checkbox" id="demo-copy" name="demo-copy">
 												<label for="demo-copy">Email me a copy</label>
 											</div>
 											<div class="col-6 col-12-small">
 												<input type="checkbox" id="demo-human" name="demo-human" checked>
 												<label for="demo-human">I am a human</label>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-12">
+											<!-- <div class="col-12">
 												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-12">
+											<!-- <div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" value="Send Message" class="primary" /></li>
 													<li><input type="reset" value="Reset" /></li>
@@ -305,7 +305,7 @@
 										</div>
 									</form>
 
-									<hr />
+									<hr /> -->
 
 								<!-- Image -->
 									<h2>Gallery</h2>
@@ -341,8 +341,8 @@
 								<h2>Scientific Outputs</h2>
 								<div class="box">
 									<ul>
-										<li>"Sustainable Transport" - <a href="https://www.preprints.org/manuscript/202312.2262/v1">Read here</a> (Lead Author)</li>
-										<li>"Classification of fires" - <a href="https://onlinelibrary.wiley.com/doi/10.1111/geb.13791">Read here</a> (Co-author)</li>
+										<li>"Sustainable Transport" - <a href="https://www.mdpi.com/2071-1050/16/3/1313" style="color: blue;" >Read here</a> (Lead Author)</li>
+										<li>"Classification of fires" - <a href="https://onlinelibrary.wiley.com/doi/10.1111/geb.13791" style="color: blue;">Read here</a> (Co-author)</li>
 										<li>"Fire and Land use" - Manuscript in progress (Lead-Author)</li>
 									</ul>
 								</div>
