--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%205.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="button">Full Story</a></li>
+										<li><a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="button" style="color: blue;">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -131,7 +131,7 @@
 										programming by International Programs staff.</p>
 										<p><strong>Mentor/Referee:</strong> [Louis Fleming-Forest Service International Programs]</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/desmond-lartey/Wildfire-Assessment" class="button">Full Story</a></li>
+										<li><a href="https://github.com/desmond-lartey/Wildfire-Assessment" class="button" style="color: blue;">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
