--- a/index.html
+++ b/index.html
@@ -53,8 +53,27 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<span class="date">January, 2024</span>
+									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1a: Enhancing active mobility on the Dutch Caribbean island of Bonaire<br />
+									</a></h2>
+									<p>
+										Physical activity rates differ across the world, with evidence pointing to particularly low levels within Caribbean communities. 
+										The Caribbean Dutch municipality of Bonaire exemplifies this trend. 
+										To address this issue, a diverse team including researchers from the Urban Cycling Institute, officials from the Ministry of Health, Welfare and Sports, and important local stakeholders from multiple sectors in Bonaire will collaborate to boost physical activity and promote health equality on the island.<br />
+										<br />
+										Conduct spatial planning and accessibility analysis of environmental determinants of Physical accessibility for Bonaire using policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
+								</header>
+								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://urbancyclinginstitute.org/transforming-paris-from-below-cycling-as-a-social-movement/" class="button large">View Project</a></li>
+								</ul>
+							</article>
+
+						<!-- Featured Post -->
+							<article class="post featured">
+								<header class="major">
 									<span class="date">December, 2022</span>
-									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1: Active Travel<br />
+									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b: Active Travel<br />
 									</a></h2>
 									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system<br />
 										.<br />
@@ -64,7 +83,7 @@
 								<ul class="actions special">
 									<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button large">View Project</a></li>
 								</ul>
-							</article>
+							</article>							
 
 						<!-- Posts -->
 							<section class="posts">
