--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<br />
 										Conduct spatial planning and accessibility analysis of environmental determinants of Physical accessibility for Bonaire using policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
 								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
+								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://urbancyclinginstitute.org/transforming-paris-from-below-cycling-as-a-social-movement/" class="button large">View Project</a></li>
 								</ul>
