--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
 										Conduct spatial planning and accessibility analysis of environmental determinants of Physical accessibility for Bonaire using policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
 								</header>
 								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glasser, Dr. Dylan Power]</p>
 								<ul class="actions special">
 									<li><a href="https://urbancyclinginstitute.org/transforming-paris-from-below-cycling-as-a-social-movement/" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<header class="major">
 									<span class="date">December, 2022</span>
 									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b: Active Travel<br />
@@ -83,7 +84,22 @@
 								<ul class="actions special">
 									<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button large">View Project</a></li>
 								</ul>
-							</article>							
+							</article>							 -->
+
+							<section class="posts">
+								<article>
+									<header>
+										<span class="date">December, 2022</span>
+										<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 1b<br />
+											Active Travel<br />
+										</a></h2>
+									</header>
+									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
+									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel.</p>
+									<ul class="actions special">
+										<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button">Full Story</a></li>
+									</ul>
+								</article>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -100,6 +116,7 @@
 										<li><a href="https://agro-nl.com/" class="button">Full Story</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">September, 2021</span>
