--- a/index.html
+++ b/index.html
@@ -64,27 +64,13 @@
 										Conduct spatial planning and accessibility analysis of environmental determinants of Physical accessibility for Bonaire using policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
 								</header>
 								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
-								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glasser, Dr. Dylan Power]</p>
+								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
 								<ul class="actions special">
 									<li><a href="https://urbancyclinginstitute.org/transforming-paris-from-below-cycling-as-a-social-movement/" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
-						<!-- Featured Post -->
-							<!-- <article class="post featured">
-								<header class="major">
-									<span class="date">December, 2022</span>
-									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b: Active Travel<br />
-									</a></h2>
-									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system<br />
-										.<br />
-										Part of this is also to explore the role of Participatory GIS in capacity for active travel. Read more about the project by clicking the link below.</p>
-								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button large">View Project</a></li>
-								</ul>
-							</article>							 -->
+													 
 
 							<section class="posts">
 								<article>
@@ -96,6 +82,7 @@
 									</header>
 									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
 									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel.</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser]</p>
 									<ul class="actions special">
 										<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button">Full Story</a></li>
 									</ul>
@@ -112,6 +99,7 @@
 									</header>
 									<a href="https://agro-nl.com/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%202.png" alt="" /></a>
 									<p>As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
+									<p><strong>Mentor/Referee:</strong> [Alina Lomans]</p>
 									<ul class="actions special">
 										<li><a href="https://agro-nl.com/" class="button">Full Story</a></li>
 									</ul>
@@ -125,10 +113,12 @@
 									</header>
 									<a href="https://www.wur.nl/en/research-results/chair-groups/environmental-sciences/plant-ecology-and-nature-conservation-group.htm" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%203.png" alt="" /></a>
 									<p>In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. Our Research focuses on National Reserves increasingly vulnerable to threats from urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. We leverage different Machine Learning Algorithms to create high-quality land use maps and detect changes. Read about the work by following the link bellow.</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Elmar Veenendaal, dr. NE (Nandika) Tsendbazar]</p>
 									<ul class="actions special">
 										<li><a href="https://ee-desmond.projects.earthengine.app/view/intensity-analysis" class="button">Full Story</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">September, 2022</span>
@@ -137,10 +127,12 @@
 									</header>
 									<a href="https://www.wur.nl/en/research-results/chair-groups/environmental-sciences/plant-ecology-and-nature-conservation-group.htm" class="image fit" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%204.png" alt="" /></a>
 									<p>In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. We need to protect these areas from rapid urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. Three machine learning algorithms – Random Forest, Support Vector Machine, and Minimum Distance (K-Nearest Neighbour) – were employed to classify multi-temporal satellite imagery. Subsequent change detection analyses were conducted using both Google Earth Engine and ArcGIS Pro to elucidate the patterns of transformations.</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Elmar Veenendaal, dr. NE (Nandika) Tsendbazar]</p>
 									<ul class="actions special">
 										<li><a href="https://ee-desmond.projects.earthengine.app/view/mltry2" class="button">Full Story</a></li>
 									</ul>
 								</article>
+
 								<article>
 									<header>
 										<span class="date">May, 2023</span>
@@ -148,11 +140,19 @@
 											PhD collaboration : Modelling Conservation Biocontrol and Land use</a></h2>
 									</header>
 									<a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%205.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In Colombia, the Coffee Berry Borer (CBB) is a major problem. 
+										This beetle reduces crop yield and quality by drilling the coffee berries and feeding on the beans 
+										during the beetles immature stages. Coffee farmers have developed CBB control strategies such as the use 
+										of chemical insecticides, the manual collection of infested berries, and the use of entomopathogenic fungi, 
+										but despite these practices, CBB remains a major problem in coffee production. A promising yet understudied approach to 
+										CBB control is conservation biological control (CBC). In this study, we model land uses in these coffee-grown areas and connect
+									   the regulation of pest populations by supporting populations of naturally occurring natural enemies.</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Dicke Marcel, Prof. Bianchi, Felix, Moreno Ramírez, Natalia]</p>
 									<ul class="actions special">
 										<li><a href="https://research.wur.nl/en/projects/conservation-biocontrol-of-a-major-insect-pest-of-coffee-in-colom-2" class="button" style="color: blue;">Full Story</a></li>
 									</ul>
 								</article>
+								
 								<article>
 									<header>
 										<span class="date">April, 2023</span>
