--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 								<article>
 									<header>
 										<span class="date">December, 2022</span>
-										<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 1b<br />
+										<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b<br />
 											Active Travel<br />
 										</a></h2>
 									</header>
