--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
 											Academische consultatie training</a></h2>
 									</header>
 									<a href="https://www.youtube.com/watch?v=BZMSFcrSbwU" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207a.png" alt="" /></a>
-									<p>•Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)
+									<p>There are multiple challenges that the area is facing. Climate change causes extreme weather events to happen more often. There will be more torrential rains, heavier storms or long dry and hot periods. The Land of Maas and Waal is vulnerable for flooding because it is surrounded by rivers. Especially in the last years, the drought is also troubling. The continue effects of climate and water related issues have consequences on land use. Therefore, We analysed the spatial challenge such as flooding, drought, and agriculture of the area and see which areas and population will be susceptible to flood when no action is taken. The main tasks performed included,
+										•Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)
 										• Stakeholder engagement and Process analysis
 										• Gegevensverzameling en analyse
 										• Designing climate implementation mechanisms
@@ -217,7 +218,7 @@
 											Integrated Fire Management</a></h2>
 									</header>
 									<a href="https://fire-res.eu/about-fire-res/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%208.png" alt="" /></a>
-									<p>2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions, high fire activity in temperate and boreal areas outside typical fire seasons and regions, and politicized deforestation fires in the Amazon. 2019 ended with a fire crisis in Australia that has never been seen before. Striking amidst these fires making year-round headlines is the lack of attention for fires in developing countries.</p>
+									<p>2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions, high fire activity in temperate and boreal areas outside typical fire seasons and regions, and politicized deforestation fires in the Amazon. 2019 ended with a fire crisis in Australia that has never been seen before. Striking amidst these fires making year-round headlines is the lack of attention for fires in developing countries. Main tasks in these project is to understand the relationship between Fires, land use and people living in and outside these landscapes. We developed a research agenda to link practinioners and experts for integrated fire management in the Global North and South.</p>
 									<p><strong>Mentor/Referee:</strong> [Dr. Cathelijne Stoof]</p>
 									<ul class="actions special">
 										<li><a href="https://pyrolife.lessonsonfire.eu/" class="button">Full Story</a></li>
