--- a/elements.html
+++ b/elements.html
@@ -379,11 +379,11 @@
 								<h2>Professional Referees</h2>
 								<div class="box">
 									<ul>
-										<li>Elmar Veenendaal – Associate Professor, Plant Ecology and Nature Conservation, WUR - elmar.veenendaal@wur.nl - (+31) 317483815</li>
+										<!-- <li>Elmar Veenendaal – Associate Professor, Plant Ecology and Nature Conservation, WUR - elmar.veenendaal@wur.nl - (+31) 317483815</li> -->
 										<li>Wim Vander Knaap – Associate Professor Land use Planning, WUR - wim.vanderknaap@wur.nl - (+31) 317483849</li>
 										<li>Patrick Cobbinnah – Assistant Professor, University of Melbourne - patrick.cobbinah@unimelb.edu.au</li>
-										<li>Kwasi Kwafo Adarkwa – Professor, College of Architecture and Planning, KNUST - kwasiadarkwa@knust.edu.gh - (+233) 0208184848</li>
-										<li>Raymond Addo – Director KARA, Former Technical Advisor, Association of Ghana Road Contractors - raakarae@gmail.com - (+233) 0208170125</li>
+										<!-- <li>Kwasi Kwafo Adarkwa – Professor, College of Architecture and Planning, KNUST - kwasiadarkwa@knust.edu.gh - (+233) 0208184848</li>
+										<li>Raymond Addo – Director KARA, Former Technical Advisor, Association of Ghana Road Contractors - raakarae@gmail.com - (+233) 0208170125</li> -->
 									</ul>
 								</div>
 
