--- a/elements.html
+++ b/elements.html
@@ -308,10 +308,10 @@
 									<hr /> -->
 
 								<!-- Image -->
-									<h2>Gallery</h2>
+									<h2>Research Trips and Activities</h2>
 
 									<h3></h3>
-									<span class="image fit"><img src="images/pic011.jpg" alt="" /></span>
+									<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
