--- a/elements.html
+++ b/elements.html
@@ -314,21 +314,23 @@
 									<span class="image fit"><img src="images/pic0111.jpg" alt="" /></span>
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic011.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 											<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
+											<!-- Break -->
+											<div class="col-4"><span class="image fit"><img src="images/pic06.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic07.png" alt="" /></span></div>
 												<!-- Break -->
-											<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic11.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic12.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic088.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic09.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic10.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic11.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic12.png" alt="" /></span></div>
 
 										</div>
 									</div>
