--- a/elements.html
+++ b/elements.html
@@ -316,7 +316,7 @@
 										<div class="row gtr-50 gtr-uniform">
 											<div class="col-4"><span class="image fit"><img src="images/pic011.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic02a.jpg" alt="" /></span></div>
 											<!-- Break -->
 											<div class="col-4"><span class="image fit"><img src="images/pic04.jpg" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
