--- a/elements.html
+++ b/elements.html
@@ -331,6 +331,8 @@
 											<div class="col-4"><span class="image fit"><img src="images/pic10.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic11.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic12.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic13.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic14.png" alt="" /></span></div>
 
 										</div>
 									</div>
