--- a/elements.html
+++ b/elements.html
@@ -333,6 +333,10 @@
 											<div class="col-4"><span class="image fit"><img src="images/pic12.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic13.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="images/pic14.png" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic15.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic16.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic17.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><img src="images/pic18.jpg" alt="" /></span></div>
 
 										</div>
 									</div>
