--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										Physical activity rates differ across the world, with evidence pointing to particularly low levels within Caribbean communities. 
 										The Caribbean Dutch municipality of Bonaire exemplifies this trend. 
 										To address this issue, a diverse team including researchers from the 
-										<a href="https://urbancyclinginstitute.org/" style="color: blue;">Urban Cycling Institute</a>, officials from the 
+										<a href="https://urbancyclinginstitute.org/enhancing-active-mobility-on-bonaire/" style="color: blue;">Urban Cycling Institute</a>, officials from the 
 										<a href="https://www.government.nl/ministries/ministry-of-health-welfare-and-sport" style="color: blue;">Ministry of Health, Welfare and Sports</a>, 
 										and important local stakeholders from multiple sectors in Bonaire will collaborate to boost physical activity and promote health equality on the island.<br />
 										<br />
@@ -69,7 +69,7 @@
 								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
 								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
 								<ul class="actions special">
-									<li><a href="https://urbancyclinginstitute.org/enhancing-active-mobility-on-bonaire/" class="button large">View Project</a></li>
+									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
 								</ul>
 							</article>		
 
