--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Desmond Lartey Portfolio</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="generic.html">My Profile</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
@@ -100,7 +100,7 @@
 									<p>As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
 									<p><strong>Mentor/Referee:</strong> [Alina Lomans]</p>
 									<ul class="actions special">
-										<li><a href="https://agro-nl.com/" class="button">Full Story</a></li>
+										<li><a href="https://agro-nl.com/#urbis-green" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
