--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Desmond Lartey Portfolio</a></li>
+							<li class="active"><a href="index.html">Project Portfolio</a></li>
 							<li><a href="generic.html">My Profile</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
