--- a/elements.html
+++ b/elements.html
@@ -52,7 +52,7 @@
 									<p>Welcome to my portfolio! I am <b>Desmond Lartey</b>, a passionate urban planner and GIS enthusiast. My work is focused on <i>innovative urban development</i> and leveraging <em>technology for sustainable solutions</em>. 
 									In my projects, I often find myself balancing <sup>technical precision</sup> with <sub>creative problem-solving</sub>. 
 									I believe in continuous learning and improvement.
-									Explore my portfolio and feel free to <a href="contact.html">get in touch</a>.</p>
+									Explore my portfolio and feel free to <a href="malto: larteydesmond3@gmail.com">get in touch</a>.</p>
 								
 									<hr />
 									<h2>Professional Journey</h2>
