--- a/elements.html
+++ b/elements.html
@@ -366,9 +366,9 @@
 								<h2>Awards, Scholarships, and Funded Projects</h2>
 								<div class="box">
 									<ul>
-										<li>Interdisciplinary Research and Education Fund - Wageningen University, 2022</li>
-										<li>Africa Scholarship Programme (ASP) - Wageningen University, 2019</li>
-										<li>TRATECH - KNUST, 2018</li>
+										<li> I have worked on Interdisciplinary Research and Education Fund - Wageningen University, 2022</li>
+										<li>Awarded Africa Scholarship Programme (ASP) - Wageningen University, 2019</li>
+										<li>Awarded TRATECH (Technology, Innovation, Trade and Business) - KNUST, 2018</li>
 									</ul>
 								</div>
 
