--- a/elements.html
+++ b/elements.html
@@ -378,11 +378,15 @@
 								<h2>Conferences and Presentations</h2>
 								<div class="box">
 									<ul>
+										<li>ARTIFICIAL INTELLIGENCE FOR HUMAN-TECHNOLOGIES-ECONOMY SUSTAINABLE DEVELOPMENT
+											MakeLearn, TIIM & PIConf International Conference
+											Lublin, Poland - 2024</li>
 										<li>TNW Conference, Amsterdam - 2023</li>
 										<li>14th AESOP Lecture Series, Netherlands - 2019</li>
 										<li>Science policy interaction at European University, Cyprus - 2021</li>
 										<li>Integrated Fire Management at Wageningen University, NL - 2022</li>
 										<li>Geo for Good Summit - 2022</li>
+
 									</ul>
 								</div>
 
