--- a/portofolio_website/portofolio.html
+++ b/portofolio_website/portofolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By "Ouijdane Ayach"-->
+<!-- Created By "Desmond Lartey"-->
 <html lang="en"
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,7 @@
 <body>
     <div id="particle-container"></div>
     <header class="header">
-        <a href="#" class="logo">Ouijdane Ayach</a>
+        <a href="#" class="logo">Desmond Lartey</a>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#services">Projects</a>
@@ -32,9 +32,9 @@
 
         </div>
         <div class="home-content">
-            <h1>Hi, it's <span>Ouijdane</span></h1>
+            <h1>Hi, it's <span>Desmond</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Enthusiastic Geoinformation Engineer with a passion for translating spatial data into meaningful insights. 
+            <p>Enthusiastic Geoinformation Scientist with a passion for translating spatial data into meaningful insights. 
                 My journey is fueled by a genuine excitement for exploring the world through cartography, remote sensing, and GIS. 
                 With a keen eye for detail and a collaborative spirit, I thrive on transforming challenges into opportunities. Let's connect and share the excitement for leveraging geospatial technology to make a positive impact!</p>
 
@@ -335,7 +335,7 @@
             <li><a href="#">Privacy Policies</a></li>
         </ul>
         <p class="copyright">
-            © Ouijdane Ayach | All Right Reserved
+            © Desmond Lartey | All Right Reserved
         </p>
         
     </footer>
