--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 							<li><a href="generic.html">My Profile</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<ul class="icons alt">
+							<li><a href="https://www.youtube.com/channel/UCm-WPV54yvj0e6iudvqd2Ug" class="icon brands alt fa-twitter"><span class="label">Youtube</span></a></li>
+							<li><a href="https://github.com/desmond-lartey" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/desmondlarte/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 						</ul>
 					</nav>
 
