--- a/elements.html
+++ b/elements.html
@@ -30,10 +30,10 @@
 							<li class="active"><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons alt">
-							<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/desmondlarte/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.instagram.com/desmond_lx/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.youtube.com/channel/UCm-WPV54yvj0e6iudvqd2Ug" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 							<li><a href="https://github.com/desmond-lartey" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/desmond-lartey/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 					</nav>
 
@@ -448,10 +448,10 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/desmondlarte/" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/desmond_lx/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.youtube.com/channel/UCm-WPV54yvj0e6iudvqd2Ug" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="https://github.com/desmond-lartey" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://twitter.com/Desmondlartey17" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/desmond-lartey/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 								</ul>
 							</section>
 						</section>
