--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
+									<span class="date">November, 2024</span>
+									<h2><a href="https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe/eu-missions-horizon-europe/adaptation-climate-change_en">Project 1a: EU Mission: Adaptation to Climate Change<br />
+									</a></h2>
+									<p>
+										DesirMED aims to enhance climate resilience in the Mediterranean, a region highly vulnerable to climate change. By prioritizing Nature-Based Solutions and fostering regional collaboration, DesirMED empowers communities and leaders across multiple Mediterranean regions to implement transformative adaptation strategies. This project aligns with the European Climate Adaptation Mission's goal to make at least 150 regions climate-resilient by 2030
+										<a href="https://cordis.europa.eu/project/id/101112972" style="color: blue;">DesirMED</a>. Similar projects 
+										<a href="https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe/eu-missions-horizon-europe/adaptation-climate-change_en" style="color: blue;">NBracer</a>, 
+										aims to enhance climate resilience in the European Atlantic regions through Nature-Based Solutions (NBS) tailored to local landscapes. NBRACER works collaboratively with communities to implement low-impact, green solutions that address climate impacts, support biodiversity, and promote sustainable, healthy environments..<br />
+										<br />
+										Together with Regional EU partners and collaborators, we create adaptation pathways for multi-hazard, multi-system resilience, with European data standards.</p>
+								</header>
+								<a href="https://cordis.europa.eu/project/id/101112836" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Presentation1.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Mindert de Vries, Tom Bucx, PhD]</p>
+								<ul class="actions special">
+									<li><a href="https://www.deltares.nl/en" class="button large">View Project</a></li>
+								</ul>
+							</article>		
+
+
+						<!-- Posts -->
+						<section class="posts">
+							<article>
+								<header>
 									<span class="date">January, 2024</span>
 									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1a: Enhancing active mobility on the Dutch Caribbean island of Bonaire<br />
 									</a></h2>
@@ -71,8 +94,21 @@
 								<ul class="actions special">
 									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
 								</ul>
-							</article>		
-
+							</article>
+							<article>
+								<header>
+									<span class="date">December, 2022</span>
+									<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 2 <br />
+										Urban Green and Sustainability<br />
+									</a></h2>
+								</header>
+								<a href="https://agro-nl.com/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%202.png" alt="" /></a>
+								<p>As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
+								<p><strong>Mentor/Referee:</strong> [Alina Lomans]</p>
+								<ul class="actions special">
+									<li><a href="https://agro-nl.com/#urbis-green" class="button">Full Story</a></li>
+								</ul>
+							</article>							
 						<!-- Posts -->
 							<section class="posts">
 								<article>
