--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<article>
 								<header>
 									<span class="date">December, 2022</span>
-									<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 2 <br />
+									<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 1b <br />
 										Urban Green and Sustainability<br />
 									</a></h2>
 								</header>
