--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 
 						<!-- Posts -->
-
+						<section class="posts">
 							<article>
 								<header>
 									<span class="date">January, 2024</span>
