--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
 									<li><a href="https://agro-nl.com/#urbis-green" class="button">Full Story</a></li>
 								</ul>
 							</article>
+						<!-- Posts -->
+						<section class="posts">
 								<article>
 									<header>
 										<span class="date">September, 2021</span>
@@ -143,6 +145,8 @@
 										<li><a href="https://ee-desmond.projects.earthengine.app/view/intensity-analysis" class="button">Full Story</a></li>
 									</ul>
 								</article>
+						<!-- Posts -->
+						<section class="posts">
 								<article>
 									<header>
 										<span class="date">September, 2022</span>
