--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 										<a href="https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe/eu-missions-horizon-europe/adaptation-climate-change_en" style="color: blue;">NBracer</a>, 
 										aims to enhance climate resilience in the European Atlantic regions through Nature-Based Solutions (NBS) tailored to local landscapes. NBRACER works collaboratively with communities to implement low-impact, green solutions that address climate impacts, support biodiversity, and promote sustainable, healthy environments..<br />
 										<br />
-										Together with Regional EU partners and collaborators, we create adaptation pathways for multi-hazard, multi-system resilience, with European data standards.</p>
+										Provide Creating adaptation pathways for multi-hazard, multi-system resilience, with European data standards.</p>
 								</header>
-								<a href="https://cordis.europa.eu/project/id/101112836" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Presentation1.png" alt="" /></a>
-								<p><strong>Mentor/Referee:</strong> [Prof. Mindert de Vries, Tom Bucx, PhD]</p>
+								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
 								<ul class="actions special">
-									<li><a href="https://www.deltares.nl/en" class="button large">View Project</a></li>
+									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
 								</ul>
 							</article>		
 
@@ -89,33 +89,12 @@
 										<br />
 										Provide GIS, Data management and spatial planning analysis support to conduct accessibility analysis of environmental determinants for Bonaire. Moreso, use policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
 								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
-								<p>As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
-								<p><strong>Mentor/Referee:</strong> [Alina Lomans]</p>
+								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
 								<ul class="actions special">
-									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button">Full Story</a></li>
+									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
 								</ul>
 							</article>
-						
-						<!-- Posts -->
-						<section class="posts">
-							<article>
-								<header>
-									<span class="date">December, 2022</span>
-									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b<br />
-										Active Travel<br />
-									</a></h2>
-								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
-								<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel.</p>
-								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser]</p>
-								<ul class="actions special">
-									<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button">Full Story</a></li>
-								</ul>
-							</article>	
-							
-						<!-- Posts -->
-						<section class="posts">
 							<article>
 								<header>
 									<span class="date">December, 2022</span>
@@ -129,9 +108,37 @@
 								<ul class="actions special">
 									<li><a href="https://agro-nl.com/#urbis-green" class="button">Full Story</a></li>
 								</ul>
-							</article>
+							</article>							
 						<!-- Posts -->
-						<section class="posts">
+							<section class="posts">
+								<article>
+									<header>
+										<span class="date">December, 2022</span>
+										<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b<br />
+											Active Travel<br />
+										</a></h2>
+									</header>
+									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
+									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel.</p>
+									<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser]</p>
+									<ul class="actions special">
+										<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">December, 2022</span>
+										<h2><a href="https://github.com/desmond-lartey/PlantsApp">Project 2 <br />
+											Urban Green and Sustainability<br />
+										</a></h2>
+									</header>
+									<a href="https://agro-nl.com/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%202.png" alt="" /></a>
+									<p>As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
+									<p><strong>Mentor/Referee:</strong> [Alina Lomans]</p>
+									<ul class="actions special">
+										<li><a href="https://agro-nl.com/#urbis-green" class="button">Full Story</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">September, 2021</span>
@@ -145,8 +152,6 @@
 										<li><a href="https://ee-desmond.projects.earthengine.app/view/intensity-analysis" class="button">Full Story</a></li>
 									</ul>
 								</article>
-						<!-- Posts -->
-						<section class="posts">
 								<article>
 									<header>
 										<span class="date">September, 2022</span>
