--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Project Portfolio</a></li>
 							<li><a href="generic.html">My Profile</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="elements.html">Element Reference</a></li>
 						</ul>
 						<ul class="icons alt">
 							<li><a href="https://www.youtube.com/channel/UCm-WPV54yvj0e6iudvqd2Ug" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
