--- a/index.html
+++ b/index.html
@@ -77,16 +77,25 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">December, 2022</span>
-										<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1b<br />
-											Active Travel<br />
+										<span class="date">January, 2024</span>
+										<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1a: Enhancing active mobility on the Dutch Caribbean island of Bonaire<br />
+											<br />
 										</a></h2>
 									</header>
 									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
-									<p>The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel.</p>
-									<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser]</p>
-									<ul class="actions special">
-										<li><a href="https://www.mdpi.com/2071-1050/16/3/1313" class="button">Full Story</a></li>
+									<p>Physical activity rates differ across the world, with evidence pointing to particularly low levels within Caribbean communities. 
+										The Caribbean Dutch municipality of Bonaire exemplifies this trend. 
+										To address this issue, a diverse team including researchers from the 
+										<a href="https://urbancyclinginstitute.org/enhancing-active-mobility-on-bonaire/" style="color: blue;">Urban Cycling Institute</a>, officials from the 
+										<a href="https://www.government.nl/ministries/ministry-of-health-welfare-and-sport" style="color: blue;">Ministry of Health, Welfare and Sports</a>, 
+										and important local stakeholders from multiple sectors in Bonaire will collaborate to boost physical activity and promote health equality on the island.<br />
+										<br />
+										Provide GIS, Data management and spatial planning analysis support to conduct accessibility analysis of environmental determinants for Bonaire. Moreso, use policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
+								</header>
+								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
+								<ul class="actions special">
+									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
 									</ul>
 								</article>
 								<article>
