--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											<br />
 										</a></h2>
 									</header>
-									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" alt="" /></a>
+									<a href="https://www.urbancyclinginstitute.org/projects/" class="image fit"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
 									<p>Physical activity rates differ across the world, with evidence pointing to particularly low levels within Caribbean communities. 
 										The Caribbean Dutch municipality of Bonaire exemplifies this trend. 
 										To address this issue, a diverse team including researchers from the 
@@ -90,9 +90,8 @@
 										<a href="https://www.government.nl/ministries/ministry-of-health-welfare-and-sport" style="color: blue;">Ministry of Health, Welfare and Sports</a>, 
 										and important local stakeholders from multiple sectors in Bonaire will collaborate to boost physical activity and promote health equality on the island.<br />
 										<br />
-										Provide GIS, Data management and spatial planning analysis support to conduct accessibility analysis of environmental determinants for Bonaire. Moreso, use policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
+										We provided spatial planning analysis support to conduct accessibility analysis of environmental determinants for Bonaire. Moreso, we used policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
 								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
 								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
 								<ul class="actions special">
 									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
