--- a/index.html
+++ b/index.html
@@ -53,23 +53,21 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">January, 2024</span>
-									<h2><a href="https://www.urbancyclinginstitute.org/projects/">Project 1a: Enhancing active mobility on the Dutch Caribbean island of Bonaire<br />
+									<span class="date">November, 2024</span>
+									<h2><a href="https://research-and-innovation.ec.europa.eu/funding/funding-opportunities/funding-programmes-and-open-calls/horizon-europe/eu-missions-horizon-europe/adaptation-climate-change_en">Project 1: EU Mission: Adaptation to Climate Change<br />
 									</a></h2>
 									<p>
-										Physical activity rates differ across the world, with evidence pointing to particularly low levels within Caribbean communities. 
-										The Caribbean Dutch municipality of Bonaire exemplifies this trend. 
-										To address this issue, a diverse team including researchers from the 
-										<a href="https://urbancyclinginstitute.org/enhancing-active-mobility-on-bonaire/" style="color: blue;">Urban Cycling Institute</a>, officials from the 
-										<a href="https://www.government.nl/ministries/ministry-of-health-welfare-and-sport" style="color: blue;">Ministry of Health, Welfare and Sports</a>, 
-										and important local stakeholders from multiple sectors in Bonaire will collaborate to boost physical activity and promote health equality on the island.<br />
+										DesirMED aims to enhance climate resilience in the Mediterranean, a region highly vulnerable to climate change. By prioritizing Nature-Based Solutions and fostering regional collaboration, DesirMED empowers communities and leaders across multiple Mediterranean regions to implement transformative adaptation strategies. This project aligns with the European Climate Adaptation Mission's goal to make at least 150 regions climate-resilient by 2030, a diverse team including researchers from the 
+										<a href="https://www.cmcc.it/it" style="color: blue;">CMCC</a>, officials from the 
+										<a href="https://www.tecnalia.com/en/" style="color: blue;">Technalia</a>, 
+										and important local stakeholders from multiple sectors within the European Union will collaborate to create adaptation pathways for multi-hazard, multi-system resilience, with European data standards.<br />
 										<br />
-										Provide GIS, Data management and spatial planning analysis support to conduct accessibility analysis of environmental determinants for Bonaire. Moreso, use policy documents and existing open-source data e.g., Geo Open Accessibility Tool, OpenStreetMap to map the policy contexts, accessibility, land use, parks, trails, playgrounds, transport infrastructure, etc.</p>
+										In addition, collaborate on the REST-COAST and NBRACER projects to support the mainstreaming of Nature-Based Solutions (NBS) for long-term climate resilience across key landscapes.</p>
 								</header>
-								<a href="https://www.urbancyclinginstitute.org/projects/" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Projecta.png" alt="" /></a>
-								<p><strong>Mentor/Referee:</strong> [Prof. Meredith Glaser, Dylan Power, PhD]</p>
+								<a href="https://www.deltares.nl/en" class="image main"><img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Presentation1.png" alt="" /></a>
+								<p><strong>Mentor/Referee:</strong> [Prof. Mindert de Vries, Tom Bucx, PhD]</p>
 								<ul class="actions special">
-									<li><a href="https://active-mobility-bonaire-uci.streamlit.app/" class="button large">View Project</a></li>
+									<li><a href="https://cordis.europa.eu/project/id/101112972" class="button large">View Project</a></li>
 								</ul>
 							</article>		
 
