--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Desmond Lartey Portfolio by HTML5 UP
+	Desmond Lartey Portfolio
 	desmond | @Desmond17
 	Contact me for any clarification on any of the projects
 -->
