--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 	Desmond Lartey Portfolio
 	desmond | @Desmond17
-	Contact me for any clarification on any of the projects
+	If you have questions on any of the projects, feel free to Contact me
 -->
 <html>
 	<head>
